scalaplugin/src/test/resource/acyclic/src/test/resources/success/pkg/mutualcyclic/b/B2.scala
package success.cyclicpackage
package b


class B2 extends a.A2{

}
