scalaplugin/src/test/resource/acyclic/src/test/resources/fail/cyclicpackage/b/B2.scala
package fail.cyclicpackage
package b
import acyclic.file

class B2 extends a.A2